fixed the side whitespace

--- a/css/styles.css
+++ b/css/styles.css
@@ -3,6 +3,10 @@
 html {
   font-size: 62.5%;
 }
+html,
+body {
+  overflow-x: hidden;
+}
 *,
 *::after,
 *::before {
@@ -22,6 +26,7 @@ body {
   color: var(--text-color);
   font-size: 2.4rem;
   line-height: 1.4;
+  width: 100%;
 }
 h1,
 h2,
